z-index positioning fixed

--- a/src/components/atoms/HamburgerMenu/HamburgerMenu.scss
+++ b/src/components/atoms/HamburgerMenu/HamburgerMenu.scss
@@ -7,7 +7,7 @@
   right: 1rem;
   transition: transform .4s .6s;
   width: 4rem;
-  z-index: 10;
+  z-index: 30;
 
   &.--is-active {
     transform: rotate(45deg);
